tests/integration/seed/predictions/invalid/ner+classif1.jsonlines
{"uuid": "1831440", "annotations": {"FOO": {"labels":[{"value": "pos", "proba": 0.999}] } ,"Entities": {"entities": [{"value": "name", "start": 23, "end": 33 }] } } }
